...
      init: Get.find<LoginController>(),
      builder: (controller) => Form(
        key: controller.formKey,
        child: Column(
          children: [
            TextFormField(
              key: const Key('matrícula_form'),
              controller: controller.registrationController,
              keyboardType: TextInputType.number,
              validator: (val) =>
                  controller.validator.validateRegistration(val),
              inputFormatters: [controller.mask.registration],
              decoration: LoginInputDecoration(
...
              padding: EdgeInsets.symmetric(
                vertical: 8,
              ),
            ),
            Obx(
              () => TextFormField(
                key: const Key('senha_form'),
                controller: controller.passwordController,
                validator: (val) =>
                    controller.validator.validateNotNullInput(val),
                decoration: LoginInputDecoration(
                  labelText: "Senha",
                  hintText: "Senha",
...
