...
  Widget build(BuildContext context) {
    return GetBuilder<ProfileController>(
      builder: (controller) => Scaffold(
        appBar: AppBar(
          actions: [
            IconButton(
              key: const Key('sair_box'),
              onPressed: () {
                showDialog(
                  context: context,
                  builder: (context) {
                    return AlertDialog(
                      icon: const Icon(Icons.logout_outlined),
...
                        TextButton(
                          key: const Key('cancelar_logout_button'),
                          onPressed: () => Get.back(),
                          child: const Text("Cancelar"),
                        ),
                        TextButton(
                          key: const Key('confirmar_logout_button'),
                          onPressed: () {
                            controller.logout();
                            Get.offAllNamed(AppRoutes.login);
                          },
                          child: const Text("Confirmar"),
                        ),
...
